# basevar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst  requirements.txt  setup.py  update_submodule.sh
MaxCompute/: README.md  README.zh_cn.md  algorithm.py  all_names.txt  basetype.py  basevar.py  basevar_cvg.py  basevar_part_bam.py  basevar_part_bam_doc.md  expand_target_part_bam.py  expand_udf.py  mpileup.py  split.txt
MaxCompute/gene-ibs/: .gitignore  pom.xml
MaxCompute/mpileup_extractor/: pom.xml
MaxCompute/oss-input/: .gitignore  pom.xml
MaxCompute/run_scripts/: basevar_exttable.sh  run_bam_basevar.sh
asset/sub_200cram_list_name/: 140k_sample.1.list.samplename  140k_sample.10.list.samplename  140k_sample.100.list.samplename  140k_sample.101.list.samplename  140k_sample.102.list.samplename  140k_sample.103.list.samplename  140k_sample.104.list.samplename  140k_sample.105.list.samplename  140k_sample.106.list.samplename  140k_sample.107.list.samplename  140k_sample.108.list.samplename  140k_sample.109.list.samplename  140k_sample.11.list.samplename  140k_sample.110.list.samplename  140k_sample.111.list.samplename  140k_sample.112.list.samplename  140k_sample.113.list.samplename  140k_sample.114.list.samplename  140k_sample.115.list.samplename  140k_sample.116.list.samplename  140k_sample.117.list.samplename  140k_sample.118.list.samplename  140k_sample.119.list.samplename  140k_sample.12.list.samplename  140k_sample.120.list.samplename  140k_sample.121.list.samplename  140k_sample.122.list.samplename  (+680 more)
basevar/: BaseVar.py  _version.py  executor.py  genotype.py  mpileup.py  runner.py  runner.pyx  utils.pxd  utils.py  utils.pyx  variantcaller.py
basevar/caller/: bam.py  (+35 more)
htslib/: .gitignore  Makefile
scripts/: Overlap.pl  add_info_vcf.py  carry_ratio.py  creat_pipeline.py  create_pipeline.py  draw_jointplot.py  draw_sfs.py  example.sh  extract_info.py  geograhic_selection.py  geographic_selection.py  hist2d.py
src/: algorithm.h  bam.cpp  bam.h  bam_header.cpp  bam_header.h  bam_record.cpp  bam_record.h  basetype.cpp  basetype.h  basetype_caller.cpp  basetype_caller.h  basetype_utils.cpp  basetype_utils.h  concat.cpp  concat.h  executor.cpp  fasta.cpp  fasta.h  iobgzf.cpp  iobgzf.h  main.cpp  utils.cpp  utils.h
tests/: test_io_bam.py  test_io_fastafile.py  tests_lrt.py
(+427 files in other folders)
